testsuite/tests/jst-modular-extensions/user_error6.compilers.reference
File "user_error6.ml", line 21, characters 24-56:
21 | let _bad_introduction = [%extension.something.nested] ();;
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The extension "something" was referenced improperly; it started with
       an [%extension.something.nested] extension node,
       not an [%extension.something] one
